--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,12 +9,7 @@
 
     <meta property="og:title" content="GeoLite - Geography Challenge Game" />
     <meta property="og:description" content="Test your geography skills with GeoLite! Explore random locations and guess where you are." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:type" content="website" />w
 
     <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
