added new globe favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,10 @@
 
     <meta property="og:title" content="GeoLite - Geography Challenge Game" />
     <meta property="og:description" content="Test your geography skills with GeoLite! Explore random locations and guess where you are." />
-    <meta property="og:type" content="website" />w
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
     <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
